compiler/testData/diagnostics/tests/sealed/NeverDerived.kt
sealed class Base {

}

class Derived: <!INVISIBLE_MEMBER, SEALED_SUPERTYPE!>Base<!>() {

}
